不就是看官网使用api吗？谁不会？

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,4 +2,11 @@
 <view class="container">
   <view class="title">yuyuanone占领高地</view>
   <view class="top_tip">永远白兰</view>
+  <view>{{message}}</view>
+  <view>{{n}}</view>
+  <view>
+    <button class="btn" type="primary" loading="{{loading}}" disabled="{{disabled}}" bindtap="addOne">
+      +1
+    </button>
+  </view>
 </view>
