--- a/miniprogram/pages/games/index.wxss
+++ b/miniprogram/pages/games/index.wxss
@@ -6,6 +6,7 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    margin-top: 40px;
 
 }
 
@@ -15,21 +16,27 @@
     text-align: center;
     color:#d3d3d3;
 }
+.equal{
+    margin-top: 30px;
+    font-size: 100px;
+    text-align: center;
+    color:#d3d3d3;
+}
 
-.selector{
-    /* border:1px solid red; */
+/* .selector{
+    border:1px solid red;
     width:240px;
     display: flex;
     margin-top: 40px;
     text-align: center;
-}
+} */
 
 .number{
     /* border:1px solid blue; */
     display:flex;
-    width:140px;
-
+    width:240px;
     margin: 4px;
+    margin-top: 60px;
 }
 .number1{
     border:1px solid #d3d3d3;
@@ -46,6 +53,8 @@
 
 
 .result{
-    border:1px solid red;
+    /* border:1px solid red; */
     margin:80px 0;
+    font-size: 18px;
+    color:#bfbaba;
 }
